<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <RelativeLayout
            android:id="@+id/inlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            >

                <ImageView
                    android:id="@+id/photo_Profil"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/photo1"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="30dp"
                    android:padding="5dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="170dp"
                   android:layout_marginTop="15dp"
                   android:text="@string/nim"
                   android:textSize="15sp"
                   android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="170dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/nama"
                    android:textSize="22sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="172dp"
                    android:layout_marginTop="81dp"
                    android:text="@string/kelas"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="220dp"
                    android:layout_marginTop="81dp"
                    android:text="|"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="245dp"
                    android:layout_marginTop="81dp"
                    android:text="@string/pekerjaanYgdiminati"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:id="@+id/inlay2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:background="@color/coklat"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:padding="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Jenis Kelamin"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/jenis_kelamin"
                                android:textSize="10sp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:layout_marginLeft="180dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Golongan darah"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goldar"
                                android:textSize="10sp"
                                android:textColor="@color/black"/>

                        </LinearLayout>


                    </RelativeLayout>

                </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="450dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="230dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:id="@+id/inlay3">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inlay1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tempat, tanggal lahir"
                        android:padding="5dp"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ttl"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Alamat"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:padding="10dp"
                        android:text="@string/alamat"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hobi"
                        android:padding="5dp"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:padding="10dp"
                        android:text="@string/hobi"
                        android:textSize="15sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lagu Favorit"
                        android:padding="5dp"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lagufavorit"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-condensed"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Film Favorit"
                        android:textSize="22sp"
                        android:padding="5dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filmFavorit"
                        android:textSize="15sp"
                        android:padding="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Makanan Kesukaan"
                        android:padding="5dp"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:padding="10dp"
                        android:text="@string/makananK"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Minuman Kesukaan"
                        android:padding="5dp"
                        android:textSize="22sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/minumanK"
                        android:padding="10dp"
                        android:textSize="15sp" />




                </LinearLayout>


            </ScrollView>


        </RelativeLayout>



</RelativeLayout>